--- a/.github/workflows/Gitee.yml
+++ b/.github/workflows/Gitee.yml
@@ -34,4 +34,4 @@ jobs:
 
           git add .
           git commit -m "Update from GitHub Actions" || exit 0
-          git push
+          git push || exit 0
