--- a/.github/workflows/IPRANGE.yml
+++ b/.github/workflows/IPRANGE.yml
@@ -20,7 +20,7 @@ jobs:
          git add IPRANGE.txt
          git add IPRANGE4.txt
          git add IPRANGE6.txt
-         git commit -m "Update IPRANGE.txt" -ErrorAction Ignore
+         try {git commit -m "Update IPRANGE.txt"} catch {return 0}
      - name: Push changes
        uses: ad-m/github-push-action@master
        with:
