--- a/.github/workflows/IPRANGE.yml
+++ b/.github/workflows/IPRANGE.yml
@@ -20,7 +20,7 @@ jobs:
          git add IPRANGE.txt
          git add IPRANGE4.txt
          git add IPRANGE6.txt
-         git commit -m "Update IPRANGE.txt" 2>&1
+         git commit -m "Update IPRANGE.txt" || return 0
      - name: Push changes
        uses: ad-m/github-push-action@master
        with:
