--- a/.github/workflows/IPRANGE.yml
+++ b/.github/workflows/IPRANGE.yml
@@ -15,12 +15,16 @@ jobs:
          (Get-NetFirewallDynamicKeywordAddress -Id $DYKWID).Addresses -Split ',' | Out-File IPRANGE.txt
          Get-Content IPRANGE.txt | Select-String '\.' | Out-File IPRANGE4.txt
          Get-Content IPRANGE.txt | Select-String ':' | Out-File IPRANGE6.txt
-         git config --local user.name ${GITHUB_ACTOR}
-         git config --local user.email ${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com
-         git add IPRANGE.txt
-         git add IPRANGE4.txt
-         git add IPRANGE6.txt
-         git commit -m "Update IPRANGE.txt" || $True
+         $GIT = {
+           git config --local user.name ${GITHUB_ACTOR}
+           git config --local user.email ${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com
+           git add IPRANGE.txt
+           git add IPRANGE4.txt
+           git add IPRANGE6.txt
+           git commit -m "Update IPRANGE.txt"
+         }
+         Start-Job $GIT -ErrorAction Ignore
+         Get-Job | Wait-Job
      - name: Push changes
        uses: ad-m/github-push-action@master
        with:
